Improving labels and using data.service.ts for experience, education and proficiency

--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,26 +2,26 @@
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/marcelluna" target='_blank'>
+                <a href="https://github.com/marcelluna" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "linkedin")' href="https://www.linkedin.com/in/marcel-luna-3139838/" target='_blank'>
+                <a href="https://www.linkedin.com/in/marcel-luna-3139838/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:marcel@marcelluna.com" target='_blank'>marcel&#64;marcelluna.com</a>
+            <a href="mailto:marcel@marcelluna.com" target='_blank'>marcel&#64;marcelluna.com</a>
         </div>
     </div>
 
     <div class="footer-credits text-center" >
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_marcelluna", "footer", "click")' href="https://github.com/marcelluna/portfolio" target="_blank" rel="nofollow noopener noreferrer">
+        <a href="https://github.com/marcelluna/portfolio" target="_blank" rel="nofollow noopener noreferrer">
             <div>Built with Angular by Marcel Luna</div>
         </a>
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
+        <a href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
             <div class="mt-2">Designed by Brittany Chiang</div>
         </a>
     </div>
