--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-12 col-md-6 mt-4 mt-md-0 text-center" data-aos="fade-up" data-aos-duration="1000">
                     <div class="about-img-container">
-                        <img (click)='analyticsService.sendAnalyticEvent("click_image", "about", "image")' class="rounded" width="400" height="300" src="assets/images/me4.jpg" alt="Marcel Morais Luna">
+                        <img class="rounded" width="450" height="300" src="assets/images/me4.jpg" alt="Marcel Morais Luna">
                     </div>
                 </div>
 
