--- a/src/app/components/home/education/education.component.scss
+++ b/src/app/components/home/education/education.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../variables.scss";
+@use "./../../../../variables.scss";
 
 .more-proyects{
     .proyect-col{
@@ -34,7 +34,7 @@
             border-radius: 3px;
             -webkit-transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
             transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-            background-color: $LightNavy;
+            background-color: variables.$LightNavy;
             cursor: pointer;
 
             &:hover {
@@ -49,18 +49,18 @@
             svg{
                 width: 40px;
                 height: 40px;
-                color: $Green;
+                color: variables.$Green;
             }
 
             .other-proyect-title{
                 margin: 0 0 10px;
                 font-size: 22px;
-                color: $LightestSlate;
+                color: variables.$LightestSlate;
             }
 
             .other-proyect-description{
                 font-size: 17px;
-                color: $LightSlate;
+                color: variables.$LightSlate;
             }
 
             .more-proyects-skills{
@@ -85,10 +85,10 @@
 
                 li{
                     font-size: 12px;
-                    color: $Slate;
+                    color: variables.$Slate;
                     line-height: 1.75;
                     margin-right: 15px;
-                    font-family: $CodeFont;
+                    font-family: variables.$CodeFont;
                     .underline{
                         padding-bottom: 3.5px;
                     }
@@ -102,7 +102,6 @@
 .filter-green {
   filter: invert(79%) sepia(59%) saturate(379%) hue-rotate(102deg) brightness(104%) contrast(101%);
 }
-
 
 @media(max-width: 1300px){
     .more-proyects{
