--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -13,9 +13,20 @@
         {{ 'contact.content' | translate }}
       </p>
       <div class="mt-5">
-        <a href="mailto:marcel@marcelluna.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
-          {{ 'contact.btn' | translate }}
-        </a>
+        <form [formGroup]="sendEmailForm" (ngSubmit)="sendEmail()">
+          <div class="form-group input-settings">
+            <input type="text" class="form-control text-success" id="name" formControlName="name" placeholder="{{ 'label.name' | translate }}">
+          </div>
+          <div class="form-group input-settings">
+            <input type="text" class="form-control text-success" id="email" formControlName="from" placeholder="{{ 'label.email' | translate }}">
+          </div>
+          <div class="form-group input-settings">
+            <textarea type="text" class="form-control text-success" id="text" formControlName="text" placeholder="{{ 'label.message' | translate }}"></textarea>
+          </div>
+
+          <button type="submit" [disabled]="sendEmailForm.invalid" class="main-btn" data-aos="fade-up" data-aos-duration="1000">{{ 'contact.btn' | translate }}</button>
+        </form>
+
       </div>
     </div>
   </div>
